--- a/index.html
+++ b/index.html
@@ -4,32 +4,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <style>html, body, #map { height: 100%; margin: 0; }</style>
+  <style>
+    html, body, #map { height: 100%; margin: 0; }
+    #bar { position:absolute; bottom:10px; left:10px; right:10px;
+      background:#111; color:#fff; padding:10px; border-radius:10px; font-family:Arial; }
+    button { padding:8px 10px; border-radius:8px; border:0; cursor:pointer; margin-right:8px; }
+  </style>
 </head>
 <body>
 <div id="map"></div>
+<div id="bar">
+  <div id="coords">lat=?, lng=?</div>
+  <div style="margin-top:8px;">
+    <button onclick="useMyLocation()">Use my location</button>
+    <button onclick="copy()">Copy Lat,Lng</button>
+  </div>
+</div>
 <script>
-  const tunis = [36.8065, 10.1815];
-  const map = L.map('map').setView(tunis, 13);
+  const map = L.map('map').setView([36.8065, 10.1815], 13);
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19 }).addTo(map);
+  let marker = L.marker([36.8065, 10.1815], { draggable: true }).addTo(map);
 
-  let marker = L.marker(tunis, { draggable: true }).addTo(map);
-
-  function send(lat, lng){
-    // put coords in URL so FlutterFlow can read them later
-    const newUrl = `${location.pathname}?lat=${lat}&lng=${lng}`;
-    history.replaceState({}, '', newUrl);
+  let last = {lat: 36.8065, lng: 10.1815};
+  function show(lat,lng){
+    last = {lat,lng};
+    document.getElementById('coords').innerText = `lat=${lat.toFixed(6)}, lng=${lng.toFixed(6)}`;
+  }
+  function copy(){
+    navigator.clipboard.writeText(`${last.lat},${last.lng}`);
+    alert("Copied!");
   }
 
-  map.on('click', (e) => {
-    marker.setLatLng(e.latlng);
-    send(e.latlng.lat, e.latlng.lng);
-  });
+  function useMyLocation(){
+    if (!navigator.geolocation) { alert("Geolocation not supported"); return; }
+    navigator.geolocation.getCurrentPosition(
+      (pos)=>{
+        const lat = pos.coords.latitude, lng = pos.coords.longitude;
+        marker.setLatLng([lat,lng]); map.setView([lat,lng], 16);
+        show(lat,lng);
+      },
+      (err)=> alert("Permission refused or unavailable: " + err.message),
+      { enableHighAccuracy: true, timeout: 10000 }
+    );
+  }
 
-  marker.on('dragend', () => {
-    const p = marker.getLatLng();
-    send(p.lat, p.lng);
-  });
+  show(last.lat,last.lng);
+  map.on('click', (e)=>{ marker.setLatLng(e.latlng); show(e.latlng.lat, e.latlng.lng); });
+  marker.on('dragend', ()=>{ const p=marker.getLatLng(); show(p.lat,p.lng); });
 </script>
 </body>
 </html>
